# take-note

./: .gitignore  README.md  flake.nix  pyproject.toml  requirements.dev.txt  setup.cfg  shell.nix
.devcontainer/: devcontainer.json
.github/workflows/: python-package.yml  python-test.yml
src/: take-note.py
src/take_note_cli/: __main__.py  app.py
src/take_note_cli/config/: config-home-notes.yaml  config-work-notes.yaml  config.yaml
src/take_note_cli/core/: generic_editor_handler.py  notes.py  obsidian_handler.py  vscode_handler.py
src/take_note_cli/utils/: args.py  config.py  dates.py  paths.py
src/takenote/: __main__.py
src/takenote/core/: notes.py
src/takenote/utils/: args.py  dates.py  paths.py
tests/: conftest.py
tests/core/: test_generic_editor_handler.py  test_notes.py  test_obsidian_handler.py  test_vscode_handler.py
tests/utils/: test_args.py  test_config.py  test_dates.py  test_paths.py
