[metadata]

name = take-note-cli
version = attr: takenote.__version__

description = Create and open notes in your favourite editor.
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8

license_files = LICENSE

author = Dennis Woodruff
author_email = wsinned@tutanota.com
url = https://github.com/wsinned/take-note
project_urls = 
    Source = https://github.com/wsinned/take-note

keywords = note tool utility cli

classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Natural Language :: English
    Operating System :: OS Independent
    Intended Audience :: Developers
    Topic :: Utilities
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9    
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[options.packages.find]
where = src

[options]
package_dir = 
    = src
packages = find:
include_package_data = True
python_requires = >=3.8, <4

[options.extras_require]
test = 
    pytest
    dateutils
    black

[options.entry_points]
console_scripts = 
    take-note = takenote.__main__:main